# streamdeck-podcastplayer

./: .gitignore  LICENSE  README.md  SETUP.md  config.yaml  fetch_podcasts.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  run_black.sh  run_mypy.sh  sonos_streamdeck.py
docs/: configuration.md  controls.md  testing.md  touchscreen.md
docs/development/: refactoring.md
docs/development/features/: dial-improvements.md  playback-scrubbing.md
icons/: README.md
music/: README.md
podplayer/: __init__.py  config.py  persistence.py  podcast_manager.py  sonos_control.py  streamdeck_handlers.py  streamdeck_ui.py  utils.py
tests/: __init__.py  conftest.py  test_config.py  test_fetch_podcasts.py  test_sonos_streamdeck.py
