# Build system configuration
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Package metadata
[project]
name = "podplayer"
version = "1.0.0"
description = "Control Sonos speakers via Elgato Stream Deck+"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Raffi Krikorian"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Home Automation",
    "Topic :: Multimedia :: Sound/Audio",
    "Typing :: Typed",
]

# Console scripts
[project.scripts]
podplayer = "sonos_streamdeck:main"
podplayer-fetch = "fetch_podcasts:main"

# Package configuration
[tool.setuptools]
packages = ["podplayer"]

[tool.setuptools.package-data]
podplayer = ["py.typed", "fonts/*.ttf", "fonts/*.otf"]

# Black code formatter configuration
[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | \.mypy_cache
  | \.pytest_cache
  | build
  | dist
)/
'''

